--- a/idol_gallery/idol_detail/fumika.html
+++ b/idol_gallery/idol_detail/fumika.html
@@ -3166,20 +3166,20 @@ kg
                         "comments_love_max": "…社交場という舞台は､物語の転機になる場所です｡…どうか､頁を繰る手は止めず､共に楽しみましょう｡OOさん"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/c224049e468b2305d9768c722d872902.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/d4c2931a5216c5535dabecbf96a02162.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/7ffeec8a4db951f876993d295f848c7e.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/deffde1af68cc0c419abf65dd245b577.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/e65ac2341754574f07f5c7443eda11d1.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/5cc73719a68bf89a88b91a9fc49fbe6d.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/7c1cb4ea016bb845afc7f7ba75a4cd9e.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/2652782fa6b82ff74de42a9479ae94eb.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/44efa697a0923139e3eceaac8d44bf9d.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/5b2ccc7c78fd34e74e8d1bd804369988.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/3473f3ffd6ad704ac82c54dd0f759e19.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/4d4d143a4794c74696db7810c6ff8e2b.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/21dd90a527751663fe5bf745655e20f3.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/945ef99d7bd6bbd308ecbf2950949740.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2462701/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3246,20 +3246,20 @@ kg
                         "comments_love_max": "…夜は明けても､再び廻り来る｡その円環に終わりはなく…私とOOさんの物語も､そうであればと､願っています"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/c224049e468b2305d9768c722d872902.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/d4c2931a5216c5535dabecbf96a02162.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/7ffeec8a4db951f876993d295f848c7e.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/deffde1af68cc0c419abf65dd245b577.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/e65ac2341754574f07f5c7443eda11d1.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/5cc73719a68bf89a88b91a9fc49fbe6d.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/7c1cb4ea016bb845afc7f7ba75a4cd9e.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/2652782fa6b82ff74de42a9479ae94eb.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/44efa697a0923139e3eceaac8d44bf9d.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/5b2ccc7c78fd34e74e8d1bd804369988.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/3473f3ffd6ad704ac82c54dd0f759e19.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/4d4d143a4794c74696db7810c6ff8e2b.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/21dd90a527751663fe5bf745655e20f3.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2562702\/945ef99d7bd6bbd308ecbf2950949740.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2562702/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3484,20 +3484,20 @@ kg
                         "comments_love_max": "奇跡のような日々が降り積もり…未来を､私とOOさんで紡ぐ…｡過去も未来も､煌めきで満ちるに､違いありません"
                     },
                     "voice": {
-                        "comment": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/18d153943eea61cb3f8dbaff0bc2dbeb.mp4",
-                        "comments_my_1": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/da43fa82121b9fe807abd5c89a324698.mp4",
-                        "comments_my_2": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/cea4932be8cac2f8debe4766c7a9b663.mp4",
-                        "comments_my_3": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/20e91e4519460088257a4df3b013f8c5.mp4",
-                        "comments_my_4": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/9e729bce885c1f512e834bef0c9e321a.mp4",
-                        "comments_my_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/4c1f20313cb7342680b6b03e2025965c.mp4",
-                        "comments_work_1": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/9dbe7c6f1c3c006d837d88fdc8e18a8d.mp4",
-                        "comments_work_2": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/7a0e6f91f570f23b8ac303701bc0e066.mp4",
-                        "comments_work_3": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/da3c4fd800beeeb92c87f4ef0842a2cb.mp4",
-                        "comments_work_4": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/098dac7395caccf7269825bdb27c8a15.mp4",
-                        "comments_work_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/0139746d5b1b4cf600f134e6698fad77.mp4",
-                        "comments_work_love_up": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/bd052b35c1d65a1f131dd341e3bb2553.mp4",
-                        "comments_live": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/c11fa0371705024bab342102632a2f40.mp4",
-                        "comments_love_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2467001/ef18ff3bcf4813be30d009e2f2a9d993.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2467001/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3564,20 +3564,20 @@ kg
                         "comments_love_max": "…OOさん､素敵な物語をありがとうございます｡…そして､これからも､紡いでいきましょう｡輝く物語を､ふたりで"
                     },
                     "voice": {
-                        "comment": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/fd0de4a881ec5e8e1931f6ac4d2c499d.mp4",
-                        "comments_my_1": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/49b45644d4b59c5f400e772d1a6dc247.mp4",
-                        "comments_my_2": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/6eb4c2755da56c688d9242d4bb6a999f.mp4",
-                        "comments_my_3": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/5f4b863adfcd2f7a06d94e4554f4fd38.mp4",
-                        "comments_my_4": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/a70d1846466950ab5d6b4408ca1fad24.mp4",
-                        "comments_my_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/ee10a20cb336b85437daf61027888a30.mp4",
-                        "comments_work_1": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/1a509c649d4b265c0bfd0427f068816d.mp4",
-                        "comments_work_2": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/e46c0c9b7b05b688d189ccfae5ff3fa8.mp4",
-                        "comments_work_3": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/a36499480cf69e63ec1f964b586dafae.mp4",
-                        "comments_work_4": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/4b60f72195d372b2136b598e3f110390.mp4",
-                        "comments_work_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/badff8a71192f4de1983394d8a3d7e21.mp4",
-                        "comments_work_love_up": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/14d7eb1a3a35f2806a5d18528ccd7878.mp4",
-                        "comments_live": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/a0003adfd927939c034e1aedbfeb801e.mp4",
-                        "comments_love_max": "http://idolmaster.edgesuite.net/idolmaster/sound/2567002/9bc3b129019e0f99973531b53f785e90.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2567002/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
